tests/bad/unknown_function.lens
stream when (entry){
    unknown_function(entry)
}
