tests/bad/unknown_function.out
Error: tests/bad/unknown_function.lens, block starting line 1:
<eval>:2 TypeError: Cannot call undefined
